# ast2python

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_MANIFEST_v1.0.0.json  RELEASE_MANIFEST_v4.0.0.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ast2python/: __init__.py  __main__.py  arg_helper.py  binder.py  binder_model.py  binder_registry.py  call_dispatch.py  call_handler_types.py  call_handlers.py  call_handlers_builtin.py  call_handlers_common.py  call_handlers_request.py  call_handlers_strategy.py  call_handlers_time.py  call_registry.py  context.py  contracts.py  coverage.py  diagnostics.py  distribution.py  emitter.py  errors.py  imports.py  naming.py  profiles.py  quality.py  release.py  result.py  scheduler.py  source_map.py  state.py  switch_helper.py  translator.py  translator_constants.py  translator_protocols.py  translator_support.py  types.py  unsupported.py  version.py  visuals.py
ast2python/ast/: __init__.py  schema.py
ast2python/binder_signatures/: __init__.py  array.py  box.py  color.py  label.py  line.py  map.py  math.py  matrix.py  misc.py  request.py  str.py  strategy.py  ta.py  table.py  timeframe.py
ast2python/cli/: __init__.py  commands.py  main.py  parser.py
ast2python/emitters/: __init__.py  alerts.py  code_emitter.py  imports.py  inputs.py  time.py
ast2python/lowering_matrix/: __init__.py  export_markdown.py  loader.py  lowering_matrix.json  schema.py  source_map_contract.json  validate.py
ast2python/runtime_contract/: __init__.py  generated_base.py  interfaces.py
ast2python/templates/: __init__.py  module.py
ast2python/translator_mixins/: __init__.py  boundary.py  metadata.py  metadata_build.py  metadata_declarations.py  metadata_globals.py  metadata_inputs.py  metadata_requests.py  metadata_type_info.py  type_inference.py
ast2python/translator_parts/: __init__.py  calls.py  declarations.py  expressions.py  metadata.py  module.py  shared.py  statements.py  validation.py
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DEVELOPMENT.md  FAIL_CLOSED_AUDIT.md  OPENPINE_PIPELINE.md  README.md  RELEASE_4_0.md  SECURITY.md
scripts/: build_release.py  install.sh  release_gate.sh  release_v0_1_0.sh  release_v0_2_0.sh  release_v0_3_0.sh  release_v0_4_0.sh  release_v0_5_0.sh  release_v0_6_0.sh  release_v0_7_0.sh  release_v0_8_0.sh  release_v0_9_0.sh  release_v1_0_0.sh  smoke_import_parse.sh  wheel_smoke.sh
tests/: contract_metadata.py
tests/fixtures/ast/: minimal_indicator.ast.json  nested_request_security.ast.json  request_security.ast.json  strategy_declaration.ast.json  v0_2_foundation_indicator.ast.json  v0_2_strategy_loop.ast.json
tests/fixtures/expected/v0_6/: current_basic_indicator.py
tests/fixtures/pine2ast/: current_basic_indicator.ast.json  current_basic_indicator.envelope.json
tests/integration/: test_cli.py  test_v0_6_pine2ast_pipeline.py  test_v0_7_pine2ast_target_strategy.py  test_v0_8_cli_pipeline_parity.py  test_v1_0_cross_project_e2e.py
tests/unit/: test_alert_emitter.py  test_backend_contract_runtime_v1_4.py  test_emitter.py  test_final_hardening.py  test_fixpack3B_strategy_apis.py  test_function_return_semantics.py  test_import_boundaries.py  test_imports.py  test_iteration_b_binder_matrix.py  test_iteration_d_strategy_flags.py  test_naming.py  test_release_coverage_100.py  test_release_gap_hardening.py  test_release_polish_coverage.py  test_stage7s_realtime_boundary_codegen.py  test_state.py  test_time_emitter.py  test_translation.py  test_tz_contract_fail_closed.py  test_v0_4_generation.py  test_v0_5_runtime_integration.py  test_v0_9_release_candidate_hardening.py  test_v6_math_sqrt_untyped_params.py  test_v6_modulo_operator.py  test_v6_rolling_ta_sources.py
tests/unit/lowering_matrix/: test_lowering_matrix.py  test_source_map_contract.py
tools/: lowering_matrix_export_md.py  lowering_matrix_validate.py  source_map_contract_validate.py  stage_c_p4_mtf_runner.py
