[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ast2python"
version = "1.0.0"
description = "AST2Python generator for Pine AST to Python runtime contract 1.4"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "pinelib>=1.0.1",
  "pine2ast>=0.3.9",
]

[project.scripts]
ast2python = "ast2python.cli.main:main"

[tool.setuptools]
packages = ["ast2python", "ast2python.ast", "ast2python.cli", "ast2python.emitters", "ast2python.runtime_contract", "ast2python.templates"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["dist", "build", "tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Golden generated-code snapshots intentionally mirror emitter output byte-for-byte;
# tests assert exact strings, so lint/format changes belong in the emitter first.
"tests/fixtures/expected/**/*.py" = ["E501", "F401", "I001", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = [".", "../pinelib", "../pine2ast"]

[tool.mypy]
python_version = "3.11"
packages = ["ast2python"]
mypy_path = [".", "../pinelib", "../pine2ast"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
exclude = ["dist", "build", "tests/fixtures"]
