[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ast2python"
version = "2.17.0"
description = "AST2Python generator for Pine AST to PineLib Python modules"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "pinelib @ git+https://github.com/s7cret/pinelib.git@v2.17.0",
  "pine2ast @ git+https://github.com/s7cret/pine2ast.git@v2.17.0",
]

[project.urls]
Homepage = "https://github.com/s7cret/ast2python"
Repository = "https://github.com/s7cret/ast2python"
Issues = "https://github.com/s7cret/ast2python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "black>=24",
  "mypy>=1.10",
  "build>=1.2",
]

[project.scripts]
ast2python = "ast2python.cli.main:main"

[tool.setuptools.packages.find]
include = ["ast2python*"]

[tool.setuptools.package-data]
ast2python = ["lowering_matrix/*.json"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["dist", "build", "tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
# Golden generated-code snapshots intentionally mirror emitter output byte-for-byte;
# tests assert exact strings, so lint/format changes belong in the emitter first.
"tests/fixtures/expected/**/*.py" = ["E501", "F401", "I001", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = [".", "../pinelib", "../pine2ast"]

[tool.mypy]
python_version = "3.11"
packages = ["ast2python"]
mypy_path = [".", "../pinelib", "../pine2ast"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
exclude = ["dist", "build", "tests/fixtures"]
